--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/eucliwood"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -24,13 +24,13 @@
         <activity android:name=".Activity.GeneralNormalActivity" />
         <activity android:name=".Activity.GeneralInfiniteActivity" />
         <activity android:name=".Activity.EnglishNormalActivity" />
-        <activity android:name=".Activity.EnglishInfiniteActivity" />
         <activity android:name=".Activity.SportNormalActivity" />
         <activity android:name=".Activity.SportInfiniteActivity" />
         <activity android:name=".Activity.ComputerNormalActivity" />
         <activity android:name=".Activity.ComputerInfiniteActivity" />
         <activity android:name=".Activity.SettingActivity" />
-        <activity android:name=".Activity.GameWonActivity"></activity>
+        <activity android:name=".Activity.GameWonActivity" />
+        <activity android:name=".Activity.EnglishPuzzleActivity"></activity>
     </application>
 
 </manifest>
