--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,28 +9,33 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.HomeActivity">
+        <activity android:name=".Activity.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.CategoryActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.GameNormalActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.GameInfiniteActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.MusicNormalActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.MusicInfiniteActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.GeneralNormalActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.GeneralInfiniteActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.EnglishNormalActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.SportNormalActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.SportInfiniteActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.ComputerNormalActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.ComputerInfiniteActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.AboutMeActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.GameWonActivity" />
-        <activity android:name="com.example.user.WhoIsSmarter.Activity.EnglishPuzzleActivity"></activity>
+        <activity android:name=".Activity.CategoryActivity" />
+        <activity android:name=".Activity.GameNormalActivity" />
+        <activity android:name=".Activity.GameInfiniteActivity" />
+        <activity android:name=".Activity.MusicNormalActivity" />
+        <activity android:name=".Activity.MusicInfiniteActivity" />
+        <activity android:name=".Activity.GeneralNormalActivity" />
+        <activity android:name=".Activity.GeneralInfiniteActivity" />
+        <activity android:name=".Activity.EnglishNormalActivity" />
+        <activity android:name=".Activity.SportNormalActivity" />
+        <activity android:name=".Activity.SportInfiniteActivity" />
+        <activity android:name=".Activity.ComputerNormalActivity" />
+        <activity android:name=".Activity.ComputerInfiniteActivity" />
+        <activity android:name=".Activity.AboutMeActivity" />
+        <activity android:name=".Activity.GameWonActivity" />
+        <activity android:name=".Activity.EnglishPuzzleActivity" />
+
+        <service
+            android:name=".ThemeSongService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
